--- a/Pages/index.html
+++ b/Pages/index.html
@@ -8,11 +8,11 @@
     <title>MAD (B) Project 2454797</title> <!-- Title of the webpage -->
 
     <!-- External Stylesheet -->
-    <link rel="stylesheet" href="css/style.css"> <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="Format/css.css"> <!-- Link to your external CSS file -->
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Work+Sans:400,700" rel="stylesheet"> <!-- Google Fonts -->
 
     <!-- Scroll to top script -->
-    <script src="js/script.js"></script> <!-- JavaScript file for scroll-to-top functionality -->
+    <script src="Format/js.js"></script> <!-- JavaScript file for scroll-to-top functionality -->
 
     <!-- Additional meta tags, if needed -->
 
