--- a/Pages/index.html
+++ b/Pages/index.html
@@ -37,6 +37,10 @@
 
 
 						  </ul>
+				<!--Buttons-->
+				<button id="text-enlarge">Enlarge Text</button>
+				<button id="text-speech">Read Aloud</button>
+
 						  <div class="clear"></div>
 
 											
