make text smalller button

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -39,8 +39,9 @@
 						  </ul>
 				<!--Buttons-->
 				<button id="text-enlarge">Enlarge Text</button>
+				<button id="text-shrink">Shrink Text</button>
 				<button id="text-speech">Read Aloud</button>
-
+				
 						  <div class="clear"></div>
 
 											
