--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,55 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- Document metadata -->
-    <meta charset="UTF-8"> <!-- Character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport settings -->
-    <title>MAD (B) Project 2454797</title> <!-- Title of the webpage -->
-
-    <!-- External Stylesheet -->
-    <link rel="stylesheet" href="Format/css.css"> <!-- Link to your external CSS file -->
-
-    <!-- Scroll to top script -->
-    <script src="Format/js.js"></script> <!-- JavaScript file for scroll-to-top functionality -->
-
-    <!-- Additional meta tags, if needed -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Staying Safe Online: For the Older Generation</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
 </head>
-
 <body>
 
-    <!-- Main content section -->
 
-    <!-- Title display -->
-	<div id="Navigation Page"> <!-- Wrapper for the main content -->
-		<h1 class="special-h1">Staying Safe Online: For the Older Generation</h1> <!-- Main title -->
-
-		<!-- Body content -->
-	
-
-				<!-- Navigation Header --> 
-					 <div class="wrapper">
-						<div id="topnav">
-						  <ul class="nav">
-						<li><a href="Page 1.html" id="pressHereLink">PRESS HERE</a></li>
-							
+    <div class="wrapper">
+        <header>
+            <h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
+        </header>
+        <main>
+            <!-- Main content goes here -->
 
 
-						  </ul>
-				<!--Buttons-->
-				<button id="text-enlarge">Enlarge Text</button>
-				<button id="text-shrink">Shrink Text</button>
-				<button id="text-speech">Read Aloud</button>
+			
 
-						  <div class="clear"></div>
+        </main>
+        <div class="accessibility-options">
+            <button id="text-enlarge">Enlarge Text</button>
+            <button id="text-shrink">Shrink Text</button>
+            <button id="text-speech">Read Aloud</button>
+        </div>
+    </div>
+    <footer>
+        <nav id="bottom-nav">
+            <ul class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="tips.html">Tips</a></li>
+                <!-- Add other page links here -->
 
-											
-						</div>
-					  </div>
-				 </div>
-			</div>
-	 </div>
 
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
