--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,44 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staying Safe Online: For the Older Generation</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <script src="script.js" defer></script>
+    <!-- Document metadata -->
+    <meta charset="UTF-8"> <!-- Character encoding for the document -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport settings -->
+    <title>MAD (B) Project 2454797</title> <!-- Title of the webpage -->
+
+    <!-- External Stylesheet -->
+    <link rel="stylesheet" href="Format/css.css"> <!-- Link to your external CSS file -->
+
+    <!-- Script Import -->
+    <script src="Format/js.js"></script> 
+
+    <!-- Additional meta tags, if needed -->
+
 </head>
+
 <body>
 
-
-    <div class="wrapper">
-        <header>
-            <h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
-        </header>
-        <main>
-            <!-- Main content goes here -->
-
-
-			
-
-        </main>
-        <div class="accessibility-options">
-            <button id="text-enlarge">Enlarge Text</button>
-            <button id="text-shrink">Shrink Text</button>
-            <button id="text-speech">Read Aloud</button>
-        </div>
-    </div>
-    <footer>
-        <nav id="bottom-nav">
-            <ul class="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="tips.html">Tips</a></li>
-                <!-- Add other page links here -->
-
-
-            </ul>
-        </nav>
-    </footer>
-</body>
-</html>
+		<div class="wrapper">
+			<header>
+				<h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
+			</header>
+			<main>
+				<!-- Main content goes here -->
+			</main>
+			<div class="accessibility-options">
+				<button id="text-enlarge">Enlarge Text</button>
+				<button id="text-shrink">Shrink Text</button>
+				<button id="text-speech">Read Aloud</button>
+			</div>
+		</div>
+		<footer>
+			<nav id="bottom-nav">
+				<ul class="nav">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="tips.html">Tips</a></li>
+					<!-- Add other page links here -->
+				</ul>
+			</nav>
+		</footer>
+	</body>
+	</html>
