--- a/Pages/index.html
+++ b/Pages/index.html
@@ -21,7 +21,7 @@
 
 		<div class="wrapper">
 			<header>
-				<h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
+				<h1 class="special-h1">Staying Safe Online: Understanding the risks</h1>
 			</header>
 			<main>
 				<!-- Main content goes here -->
