--- a/Pages/index.html
+++ b/Pages/index.html
@@ -29,7 +29,7 @@
 			<div class="accessibility-options">
 				<button id="text-enlarge">Enlarge Text</button>
 				<button id="text-shrink">Shrink Text</button>
-				<button id="text-speech">Read Aloud</button>
+				<button id="read-selected-text">Read Selected Text</button>
 			</div>
 		</div>
 		<footer>
