--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,46 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <!-- Document metadata -->
-    <meta charset="UTF-8"> <!-- Character encoding for the document -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport settings -->
-    <title>MAD (B) Project 2454797</title> <!-- Title of the webpage -->
-
-    <!-- External Stylesheet -->
-    <link rel="stylesheet" href="Format/css.css"> <!-- Link to your external CSS file -->
-
-    <!-- Script Import -->
-    <script src="Format/js.js"></script> 
-
-    <!-- Additional meta tags, if needed -->
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MAD(B) 2454797</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-		<div class="wrapper">
-			<header>
-				<h1 class="special-h1">Staying Safe Online: Understanding the risks</h1>
-			</header>
-			<main>
-				<!-- Main content goes here -->
-			</main>
-			<div class="accessibility-options">
-				<button id="text-enlarge">Enlarge Text</button>
-				<button id="text-shrink">Shrink Text</button>
-				<button id="read-selected-text">Read Selected Text</button>
-			</div>
-		</div>
-		<footer>
-			<nav id="bottom-nav">
-				<ul class="nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="tips.html">Tips</a></li>
-					<!-- Add other page links here -->
-				</ul>
-			</nav>
-		</footer>
-	</body>
-	</html>
+    <div class="wrapper">
+        <header>
+            <h1 class="special-h1">Staying Safe Online: Understanding the risks
+			</h1>
+        </header>
+        <nav>
+            <ul class="nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Page 1">PRESS HERE</a></li>
+                <li><a href="#">Page 3</a></li>
+                <!-- Add more links as needed -->
+            </ul>
+        </nav>
+        <main>
+            <!-- Main content goes here -->
+        </main>
+        <footer>
+            <!-- Footer content, possibly more navigation or contact info -->
+        </footer>
+    </div>
+    <div class="accessibility-options">
+        <button id="text-enlarge">Enlarge Text</button>
+        <button id="text-shrink">Shrink Text</button>
+        <button id="read-selected-text">Read Selected Text</button>
+    </div>
+</body>
+</html>
