--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAD(B) 2454797</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Staying Safe Online: Understanding The Risks</title>
+    <link rel="stylesheet" href="css.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
         <header>
-            <h1 class="special-h1">Staying Safe Online: Understanding the risks
-			</h1>
+            <h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
         </header>
         <nav>
             <ul class="nav">
