overhaul fix again

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Staying Safe Online: Understanding The Risks</title>
-    <link rel="stylesheet" href="css.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="Format/css.css">
+    <script src="Format/js.js" defer></script>
 </head>
 <body>
-    <div class="wrapper">
+	<div class="wrapper">
+        <!-- Header contains the main title of the webpage -->
         <header>
-            <h1 class="special-h1">Staying Safe Online: For the Older Generation</h1>
+            <h1 class="special-h1">Staying Safe Online: Understanding The Risks</h1>
         </header>
+        <!-- Navigation bar for moving between different pages -->
         <nav>
             <ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Page 1">PRESS HERE</a></li>
                 <li><a href="#">Page 3</a></li>
-                <!-- Add more links as needed -->
+                <!-- Additional links can be added here -->
             </ul>
         </nav>
         <main>
-            <!-- Main content goes here -->
+            <!-- The main content of your website will go here -->
         </main>
         <footer>
-            <!-- Footer content, possibly more navigation or contact info -->
+            <!-- Footer content like contact info or additional navigation -->
         </footer>
     </div>
+    <!-- Accessibility options to improve the website's usability -->
     <div class="accessibility-options">
         <button id="text-enlarge">Enlarge Text</button>
         <button id="text-shrink">Shrink Text</button>
