overhaul! again again

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,37 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staying Safe Online: Understanding The Risks</title>
+    <title>Staying Safe Online: Understanding and Navigating the Risks</title>
     <link rel="stylesheet" href="Format/css.css">
-    <script src="Format/js.js" defer></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_KEY"></script> <!-- Text-to-speech library -->
+    <script defer src="Format/js.js"></script>
 </head>
+
+
+
+
 <body>
-	<div class="wrapper">
-        <!-- Header contains the main title of the webpage -->
-        <header>
-            <h1 class="special-h1">Staying Safe Online: Understanding The Risks</h1>
-        </header>
-        <!-- Navigation bar for moving between different pages -->
-        <nav>
-            <ul class="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Page 1">PRESS HERE</a></li>
-                <li><a href="#">Page 3</a></li>
-                <!-- Additional links can be added here -->
-            </ul>
-        </nav>
-        <main>
-            <!-- The main content of your website will go here -->
-        </main>
-        <footer>
-            <!-- Footer content like contact info or additional navigation -->
-        </footer>
-    </div>
-    <!-- Accessibility options to improve the website's usability -->
-    <div class="accessibility-options">
-        <button id="text-enlarge">Enlarge Text</button>
-        <button id="text-shrink">Shrink Text</button>
-        <button id="read-selected-text">Read Selected Text</button>
+    <div id="main-content">
+        <h1 class="special-h1">Staying Safe Online: Understanding and Navigating the Risks</h1>
+        <div class="wrapper">
+            <div id="topnav">
+                <ul class="nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="identify-scams.html">Identify Scams</a></li>
+                    <li><a href="digital-literacy.html">Digital Literacy</a></li>
+                    <li><a href="quiz.html">Quiz</a></li>
+                </ul>
+            </div>
+            <button id="text-enlarge">Enlarge Text</button>
+            <button id="text-shrink">Shrink Text</button>
+            <button id="text-speech">Read Aloud</button>
+        </div>
     </div>
 </body>
 </html>
