--- a/Pages/index.html
+++ b/Pages/index.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Staying Safe Online: Understanding and Navigating the Risks</title>
-    <link rel="stylesheet" href="Format/css.css">
-    <script src="https://code.responsivevoice.org/responsivevoice.js?key=YOUR_KEY"></script> <!-- Text-to-speech library -->
-    <script defer src="Format/js.js"></script>
+    <!-- Document metadata -->
+    <meta charset="UTF-8"> <!-- Character encoding for the document -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive viewport settings -->
+    <title>MAD (B) Project 2454797</title> <!-- Title of the webpage -->
+
+    <!-- External Stylesheet -->
+    <link rel="stylesheet" href="Format/css.css"> <!-- Link to your external CSS file -->
+
+    <!-- Script Import -->
+    <script src="Format/js.js"></script> 
+
+    <!-- Additional meta tags, if needed -->
+
 </head>
 
-
-
-
 <body>
-    <div id="main-content">
-        <h1 class="special-h1">Staying Safe Online: Understanding and Navigating the Risks</h1>
-        <div class="wrapper">
-            <div id="topnav">
-                <ul class="nav">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="identify-scams.html">Identify Scams</a></li>
-                    <li><a href="digital-literacy.html">Digital Literacy</a></li>
-                    <li><a href="quiz.html">Quiz</a></li>
-                </ul>
-            </div>
-            <button id="text-enlarge">Enlarge Text</button>
-            <button id="text-shrink">Shrink Text</button>
-            <button id="text-speech">Read Aloud</button>
-        </div>
-    </div>
+
+    <!-- Title display -->
+	<div id="Navigation Page"> <!-- Wrapper for the main content -->
+		<h1 class="special-h1">Staying Safe Online: For the Older Generation</h1> <!-- Main title -->
+	
+
+				<!-- Navigation Header --> 
+					 <div class="wrapper">
+						<div id="topnav">
+						  <ul class="nav">
+						<li><a href="Page 1.html" id="pressHereLink">PRESS HERE</a></li>
+
+							
+
+
+						  </ul>
+				<!--Buttons-->
+				<button id="text-enlarge">Enlarge Text</button>
+				<button id="text-shrink">Shrink Text</button>
+				<button id="text-speech">Read Aloud</button>
+
+						  <div class="clear"></div>
+
+											
+						</div>
+					  </div>
+				 </div>
+			</div>
+
 </body>
 </html>
