--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -13,7 +13,7 @@
     <div class="navigation-page">
         <div class="title-container">
         <h1 class="special-h1">Introduction to Digital Literacy: Resources and Guide</h1>
-        <img src="/Users/edwardcashmore/Google Drive/Uni Work/Year 4/MAD B/Project/Pages/Images/icon.png" alt="Icon" class="title-icon">
+        <img src="Images/icon.png" alt="Icon" class="title-icon">
         </div> 
         <div class="accessibility-buttons">
             <button id="text-enlarge">Enlarge Text</button>
@@ -63,7 +63,7 @@
                 <h2 class="email-h2">1. Check the Sender's Email Address</h2>
                 <p><strong>Mismatched or Odd Email Addresses:</strong> Scammers often use email addresses that resemble legitimate ones but with subtle differences. For example, using "rn" instead of "m" (e.g., "admin@cornpany.com" instead of "admin@company.com").</p>
                 <p><strong>Public Email Domains:</strong> Be wary of emails coming from public email services (e.g., @gmail.com, @yahoo.com) when they claim to be from a legitimate organization, which should have its domain (e.g., @company.com).</p>
-                <img src="/Users/edwardcashmore/Google Drive/Uni Work/Year 4/MAD B/Project/gif1.gif" alt="Step 1 GIF" class="enlarge-image" onclick="toggleImageSize(this);">
+                <img src="Images/gif1.gif" alt="Step 1 GIF" class="enlarge-image" onclick="toggleImageSize(this);">
 
             </div>
             <div class="guide-page right">
@@ -71,14 +71,14 @@
                 <p><strong>Spelling and Grammar Mistakes:</strong> Professional organisations proofread their communication. Numerous errors could indicate a scam.</p>
                 <p><strong>Generic Greetings:</strong> Scammers often use generic phrases like "Dear Customer" because they are sending bulk emails and don’t know your name.</p>
                 <p><strong>Urgent or Threatening Language:</strong> Scammers create a sense of urgency to provoke quick action. Look out for threats or warnings of account closure, fines, or legal action.</p>
-                <img src="/Users/edwardcashmore/Google Drive/Uni Work/Year 4/MAD B/Project/image1.png" alt="Step 2 IMG" class="enlarge-image" onclick="toggleImageSize(this);"> 
+                <img src="Images/image1.png" alt="Step 2 IMG" class="enlarge-image" onclick="toggleImageSize(this);"> 
 
             </div>
             <div class="guide-page left">
                 <h2 class="email-h2">3. Avoid Clicking on Suspicious Links or Attachments</h2>
                 <p><strong>Phishing emails often contain links to malicious websites or attachments that can infect your device with malware.</strong></p>
                 <p><strong>Before clicking on any links or downloading attachments, hover your cursor over them to preview the URL or file name. If the link or attachment appears suspicious or unfamiliar, refrain from interacting with it and report the email to your organization's IT department or email provider.</strong></p>
-                <img src="/Users/edwardcashmore/Google Drive/Uni Work/Year 4/MAD B/Project/image2.png" alt="Step 3 IMG" class="enlarge-image" onclick="toggleImageSize(this);"> 
+                <img src="Images/image2.png" alt="Step 3 IMG" class="enlarge-image" onclick="toggleImageSize(this);"> 
 
             </div>
             <div class="guide-page left">
