--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -14,7 +14,7 @@
     <div class="navigation-page">
         <div class="title-container">
         <h1 class="special-h1">Introduction to Digital Literacy: Resources and Guide</h1>
-        <img src="/Users/edwardcashmore/Google Drive/Uni Work/Year 4/MAD B/Project/Pages/Images/icon.png" alt="Icon" class="title-icon">
+        <img src="Images/icon.png" alt="Icon" class="title-icon">
         </div> 
         <div class="accessibility-buttons">
             <button id="text-enlarge">Enlarge Text</button>
