--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -38,7 +38,10 @@
         <div class="guide-container">
             <div class="guide-page left">
                 <h2 class="facebook-h2">1. Customize Your Privacy Settings</h2>
-                <p><strong>Profile Privacy:</strong> Go through your Facebook privacy settings and adjust who can see your posts, send you friend requests, and how people can look you up. Regularly review these settings to ensure they're set according to your preference.</p>
+              
+              <p><strong>Profile Privacy:</strong> Go through your Facebook privacy settings and adjust who can see your posts, send you friend requests, and how people can look you up. Regularly review these settings to ensure they're set according to your preference.</p>
+              <img src="Images/accountname.png" alt="Account name" class="enlarge-image" onclick="toggleImageSize(this);"> 
+
             </div>
             <div class="guide-page right">
                 <h2 class="facebook-h2">2. Review Your Friends List</h2>
