--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -111,7 +111,7 @@
                 <p><strong>Centralized Security:</strong> If writing down passwords is too challenging, using password managers allow you to store all your passwords in one secure place, protected by one master password.</p>
                 <p><strong>Password Generation:</strong> They can generate strong, random passwords for you, eliminating the need to create and remember complex passwords.</p>
                 <p><strong>Accessibility:</strong> Access your passwords across devices securely.</p>
-                <p><strong>However, they can cost money, some notably password managers include <a href="https://www.lastpass.com/">LastPass</a>, <a href="https://passwords.google/intl/en_uk/"> Google Passwords</a> and <a href="https://support.apple.com/en-gb/109016"> iCloud Keychain</a> </strong></p>
+                <p><strong>However, they can cost money, some notably password managers include <a href="https://www.lastpass.com/" target="_blank" class="resource-link">LastPass</a>, <a href="https://passwords.google/intl/en_uk/" target="_blank" class="resource-link"> Google Passwords</a> and <a href="https://support.apple.com/en-gb/109016" target="_blank" class="resource-link"> iCloud Keychain</a> </strong></p>
             </div>
             <div class="guide-page left">
                 <h2 class="password-h2">3. Regularly Update Your Passwords</h2>
