--- a/Pages/index.html
+++ b/Pages/index.html
@@ -34,6 +34,9 @@
             <li><a href="https://www.commonsensemedia.org/" target="_blank" class="resource-link">Common Sense Media</a></li>
         </ul>
         </ul>
+
+        <h2>What is digtal literacy?</h2>
+        <p> Digital literacy is defined by the digital transformation section of the <a href="https://digital-transformation.hee.nhs.uk/building-a-digital-workforce/digital-literacy/what-is-digital-literacy" target="_blank" class="resource-link"> NHS </a> is the skills that allow for someone to live, learn, work and prticipate in a and thriving  digital society"</p>
     </section>
     
 </div>
