--- a/Pages/feedback.html
+++ b/Pages/feedback.html
@@ -28,6 +28,7 @@
 <section id="feedback-form">
     <h2>Feedback</h2>
     <section id="content">
+        <p>Use this feedback section to comment on improvements you would like to see on the website! You can use a github account to sign in, which is easy if you have a microsoft account! Test your new skills and give it a go!</p>
 
         <div id="utterances-container"></div>
         <script src="https://utteranc.es/client.js"
