--- a/Pages/index.html
+++ b/Pages/index.html
@@ -25,7 +25,8 @@
     <!-- External Resources Section -->
     <section id="content">
         <h2>About the Website</h2>
-        <p>This website serves to help aid and improve your digital literacy and assist in being safe online. To navigate the website you can use your keyboard (left and right) to navigate through the pages. Feel free to access the accessability buttons to enlarge and shrink text, as well as read aloud.</p>
+        <p>This website serves to help aid and improve your digital literacy and assist in being safe online. To navigate the website you can use your keyboard (left and right) to navigate through the pages. Feel free to access the accessibility buttons to enlarge and shrink text, as well as read aloud.</p>
+        <p>The website is designed with wide-screen landscape use in mind i.e computer screens and tablets, if you are viewing using a smartphone change device if possible.</p>
         <h2>External Resources</h2>
         <p>Explore these curated external resources to further enhance your digital literacy, after making use of the resources and guides present within this website!</p>
         <ul>
