various image additions

--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -46,6 +46,8 @@
             <div class="guide-page right">
                 <h2 class="facebook-h2">2. Review Your Friends List</h2>
                 <p><strong>Know Your Friends:</strong> Periodically review your friends list to ensure you're only connected with people you know and trust. Remember, the more people have access to your information, the greater the risk of data misuse.</p>
+                <img src="Images/friendslist.png" alt="Friends list photo" class="enlarge-image" onclick="toggleImageSize(this);"> 
+
             </div>
             <div class="guide-page left">
                 <h2 class="facebook-h2">3. Limit The Information You Share</h2>
@@ -112,6 +114,8 @@
                 <p><strong>Password Generation:</strong> They can generate strong, random passwords for you, eliminating the need to create and remember complex passwords.</p>
                 <p><strong>Accessibility:</strong> Access your passwords across devices securely.</p>
                 <p><strong>However, they can cost money, some notably password managers include <a href="https://www.lastpass.com/" target="_blank" class="resource-link">LastPass</a>, <a href="https://passwords.google/intl/en_uk/" target="_blank" class="resource-link"> Google Passwords</a> and <a href="https://support.apple.com/en-gb/109016" target="_blank" class="resource-link"> iCloud Keychain</a> </strong></p>
+                <img src="Images/lastpass.png" alt="Last pass logo" class="enlarge-image" onclick="toggleImageSize(this);"> 
+
             </div>
             <div class="guide-page left">
                 <h2 class="password-h2">3. Regularly Update Your Passwords</h2>
