--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -59,7 +59,10 @@
                 </div>
             </div>
             <!-- Navigation buttons -->
-        </div>
+            <div class="guide-navigation">
+                <button class="prev-guide-step">Previous Step</button>
+                <button class="next-guide-step">Next Step</button>
+            </div>
         </div>
     </div>
 
