--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -53,11 +53,13 @@
                 <h2 class="facebook-h2">3. Limit The Information You Share</h2>
                 <p><strong>Be Mindful:</strong> Be cautious about the personal information you share on your profile or posts. Avoid sharing sensitive information that could be used for identity theft, such as your home address, phone number, or date of birth.</p>
            
-                <div class="guide-navigation last-guide-step">
+                <div class="guide-navigation">
                     <button class="prev-guide-step">Previous Step</button>
-                    <button class="next-guide-step" onclick="showNextGuide('email')">Next Guide: Email Security</button>
+                    <button class="next-guide" onclick="showNextGuide('email')">Next Guide: Email Security</button>
                 </div>
             </div>
+        </div>
+    </div>
             <!-- Navigation buttons -->
             <div class="guide-navigation">
                 <button class="prev-guide-step">Previous Step</button>
