--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -93,6 +93,9 @@
                 <h2 class="email-h2">4. Report Suspicious Emails</h2>
                 <p><strong>If you receive a suspicious email, report it to your organisation's IT department and email provider. Reporting phishing attempts helps protect others from falling victim to similar scams.</strong></p>
             </div>
+
+            <button class="next-guide-step" onclick="showNextGuide('passwords')">Next Guide: Password Management</button>
+
         </div>
             <!-- Navigation buttons -->
             <div class="guide-navigation">
