--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -53,9 +53,8 @@
                 <h2 class="facebook-h2">3. Limit The Information You Share</h2>
                 <p><strong>Be Mindful:</strong> Be cautious about the personal information you share on your profile or posts. Avoid sharing sensitive information that could be used for identity theft, such as your home address, phone number, or date of birth.</p>
            
-                <div class="guide-navigation last-guide-step">
-                    <button class="prev-guide-step">Previous Step</button>
-                    <button class="next-guide-step" onclick="showNextGuide('email')">Next Guide: Email Security</button>
+                        <button class="next-guide-step" onclick="showNextGuide('email')">Next Guide: Email Security</button>
+
             </div>
             <!-- Navigation buttons -->
             <div class="guide-navigation">
@@ -93,7 +92,7 @@
             <div class="guide-page left">
                 <h2 class="email-h2">4. Report Suspicious Emails</h2>
                 <p><strong>If you receive a suspicious email, report it to your organisation's IT department and email provider. Reporting phishing attempts helps protect others from falling victim to similar scams.</strong></p>
-                <button class="next-guide" onclick="showNextGuide('passwords')">Next Guide: Password Management</button>
+                <button class="next-guide-step" onclick="showNextGuide('passwords')">Next Guide: Password Management</button>
 
             </div>
 
