--- a/Pages/index.html
+++ b/Pages/index.html
@@ -27,6 +27,7 @@
         <h2>About the Website</h2>
         <p>This website serves to help aid and improve your digital literacy and assist in being safe online. To navigate the website you can use your keyboard (left and right) to navigate through the pages. Feel free to access the accessibility buttons to enlarge and shrink text, as well as read aloud.</p>
         <p>The website is designed with wide-screen landscape use in mind i.e computer screens and tablets, if you are viewing using a smartphone change device if possible.</p>
+        <p>This project was created in part of MAD(B) 2454797 at the University of Glasgow.</p>
         <h2>External Resources</h2>
         <p>Explore these curated external resources to further enhance your digital literacy, after making use of the resources and guides present within this website!</p>
         <ul>
@@ -37,7 +38,7 @@
         </ul>
 
         <h2>What is digtal literacy?</h2>
-        <p> Digital literacy is defined by the digital transformation section of the <a href="https://digital-transformation.hee.nhs.uk/building-a-digital-workforce/digital-literacy/what-is-digital-literacy" target="_blank" class="resource-link"> NHS </a> is the skills that allow for someone to live, learn, work and prticipate in a and thriving  digital society"</p>
+        <p> Digital literacy is defined by the digital transformation section of the <a href="https://digital-transformation.hee.nhs.uk/building-a-digital-workforce/digital-literacy/what-is-digital-literacy" target="_blank" class="resource-link"> NHS </a> is the skills that allow for someone to live, learn, work and prticipate in a and thriving  digital society".</p>
     </section>
     
 </div>
@@ -53,7 +54,7 @@
     </div>
 </div>
 
-<footer>MAD(B) 2454797</footer>
+
 
 
 </body>
