--- a/Pages/guides.html
+++ b/Pages/guides.html
@@ -112,7 +112,7 @@
             <div class="guide-page left">
                 <h2 class="password-h2">1. Use Strong and Unique Passwords</h2>
                 <p><strong>Complexity:</strong> Create passwords that are a mix of letters (both uppercase and lowercase), numbers, and symbols. If you are going to write them down make sure you learn how to encrypt files!</p>
-                <p><strong>Length:</strong> Aim for at least 12 characters. Longer passwords are harder to crack.</p>
+                <p><strong>Length:</strong> Aim for at least 12 characters. Longer passwords are harder to crack. An example of a good password would be: cr*9ij+2es1&_Ara2</p>
                 <p><strong>Unpredictability:</strong> Avoid using easily guessable information like your name, birthdate, or common words.</p>
             </div>
             <div class="guide-page right">
